--- a/ktra.html
+++ b/ktra.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/sharp-solid.css">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/sharp-regular.css">
   <link rel="stylesheet" href="ktra.css">
-  <link rel="shortcut icon" href="Scarlet and Auburn.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../Scarlet and Auburn.jpg" type="image/x-icon">
 </head>
 <div class="responsive">
   <div class="header">
@@ -42,7 +42,7 @@
       <p><i class='far fa-file-alt' style='font-size:24px'></i> Lorem ipsum dolor sit amet.</p>
       <hr>
       <div class="bottomleft">
-        <img src="meow.jpg" alt="meo na">
+        <img src="/meow.jpg" alt="meo na">
 
         <div align="justify" class="paraleft">"Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           Doloremque iure, quis quas incidunt laboriosam
@@ -64,7 +64,7 @@
         style="color: tomato; padding-left: 20px; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: larger;">
         Our Products</p>
       <div class="content_right">
-        <img src="hinh.jpg" alt="">
+        <img src="/hinh.jpg" alt="">
         <div class="para">
           <div style="color: blue; font-family: Arial, Helvetica, sans-serif;">Dolore Magna aliqua</div>
           <div align="justify">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure, quis quas
@@ -87,7 +87,7 @@
         <hr>
         <br>
 
-        <img src="hinh.jpg" alt="">
+        <img src="/hinh.jpg" alt="">
         <div class="para">
           <div style="color: blue; font-family: Arial, Helvetica, sans-serif;">Dolore Magna aliqua</div>
           <div align="justify">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure, quis quas
