--- a/ktra.html
+++ b/ktra.html
@@ -49,8 +49,8 @@
           repudiandae odio vel fugit beatae omnis doloribus possimus facilis tempore odit atque quae, molestiae, esse
           natus?"
           <br>
-          <a href="https://youtube.com"
-            style="float: right; color: brown; font-family: Georgia, 'Times New Roman', Times, serif;" target="_blank">
+          <a href="https://youtube.com" 
+            style="float: right; color: brown; font-family: Georgia, 'Times New Roman', Times, serif; text-decoration: none" target="_blank">
             read more
             <i class='fas fa-spider'></i>
           </a>
@@ -74,7 +74,7 @@
             natus?"
           </div>
           <a href="https://google.com"
-            style="float: right; color: brown; font-family: Georgia, 'Times New Roman', Times, serif;" target="_blank">
+            style="float: right; color: brown; font-family: Georgia, 'Times New Roman', Times, serif; text-decoration: none" target="_blank">
             <br>
             read more
             <i class='fas fa-spider'></i>
@@ -97,7 +97,7 @@
             natus?"
           </div>
           <a href="https://google.com"
-            style="float: right; color: brown; font-family: Georgia, 'Times New Roman', Times, serif;" target="_blank">
+            style="float: right; color: brown; font-family: Georgia, 'Times New Roman', Times, serif; text-decoration: none" target="_blank">
             <br>
             read more
             <i class='fas fa-spider'></i>
